# HomeServer

./: .env  .env.example  .gitignore  Makefile  README.md
apps/: README.md
apps/_template/: app.py  manifest.json
apps/_template/migrations/: 0001_initial.sql
apps/_template/static/: app.css  app.js  index.html
apps/splitwise/: app.py  manifest.json
apps/splitwise/migrations/: 0001_initial.sql  0002_participants.sql  0003_settlements.sql
apps/splitwise/static/: app.css  app.js  index.html
chat/: Dockerfile  apps_loader.py  chat.py  requirements.txt
chat/static/: app-wrapper.html  apps.html  index.html  notes.html  routines.html  search.html
chat/static/css/: apps.css  chat.css  notes.css  routines.css  search.css  shared.css
chat/static/js/: chat.js  nav.js  notes.js  routines.js  search.js  shared.js
code/: Dockerfile  code.py  test_quicksort.py
files/: Dockerfile  ENCRYPTION.md  files.py  requirements.txt
keychain-rs/: Cargo.toml  build.rs  sign-and-run.sh
keychain-rs/entitlements/: keychain-rs.entitlements
keychain-rs/src/: cf.rs  error.rs  keychain.rs  lib.rs  main.rs  secure_enclave.rs
keychain-rs/src/ffi/: cf.rs  mod.rs  security.rs
llm/: embed.py  proxy.py  requirements.txt  server.py
money/: hello_money.py
postgres/: init.sql
search/: Dockerfile  search.py
searxng/: settings.yml
ui/: kit.css  kit.js  tokens.css
